Mon May 13 16:53:45 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-mouse-properties.c (main): uncomment accidentally
	commented lines.  Also, fixed text, #76413

2002-05-13  Jody Goldberg <jody@gnome.org>

	* gnome-mouse-properties.glade : Remove separator.
	  Remove accelerators in tabs.

2002-05-12  Anders Carlsson  <andersca@gnu.org>

	* gnome-mouse-properties.c: (drag_threshold_from_gconf),
	(drag_threshold_to_gconf), (event_box_button_press_event),
	(load_pixbufs), (setup_dialog), (create_dialog),
	(dialog_response_cb), (main):
	* gnome-mouse-properties.glade:
	Lots of things. Fix drag threshold preference, use a GtkImage
	instead of a GtkDrawingArea for the double click test. Remove
	weird weak refs throughout the code. Clean up the glade file,
	requires a new libglade that has an a11y ref count fix.
	
2002-05-10  Anders Carlsson  <andersca@gnu.org>

	* gnome-mouse-properties.c: (get_default_mouse_info),
	(motion_acceleration_from_gconf), (threshold_from_gconf):
	If the threshold or acceleration value is -1, just set the slider
	to the default X value.
	
2002-05-09  Jody Goldberg <jody@gnome.org>

	* gnome-mouse-properties.c (dialog_button_clicked_cb) : enable help.
	(main) : ditto.

2002-05-09  Jody Goldberg <jody@gnome.org>

	* gnome-mouse-properties.glade : long forgotten atk patch from Dave.
	  Sorry.

2002-05-08  Jakub Steiner <jimmac@ximian.com>

	* double-click-maybe.png:
	* double-click-off.png:
	* double-click-on.png: use a lightbulb on a dark background

Wed Apr 10 18:05:42 2002  Jonathan Blandford  <jrb@gnome.org>

	* mouse.desktop.in (Exec): s/gnome2/gnome

2002-03-21  Dave Camp  <dave@ximian.com>

	* gnome-mouse-properties.c (*_{to|from}_gconf): Add the peditor 
	arguments.
	(setup_dialog): Use locate_pointer instead of locate_pointer_id.
	(threshold_to_gconf): New function.
	(setup_dialog): Use threshold_to_gconf for motion_threshold and
	drag_threshold.

2002-03-11  Richard Hestilow  <hestilow@ximian.com>
