@@ -1,3 +1,8 @@
+Tue May 21 20:09:22 2002  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-mouse-properties.c (event_box_button_press_event): fix
+	broken double-click test.
+
 Mon May 13 16:53:45 2002  Jonathan Blandford  <jrb@redhat.com>
 
 	* gnome-mouse-properties.c (main): uncomment accidentally
